--- a/index.html
+++ b/index.html
@@ -27,16 +27,22 @@
           <section class="section">
             <h1 class="section-heading">Introduction to AI</h1>
             <p class="section-content">
-              Artificial intelligence is the simulation of human intelligence
+              <!-- mark tag is specifies the highlight the text -->
+              <mark>Artificial intelligence</mark> 
+              is the simulation of human intelligence
               processes by machines, especially computer systems. Specific
               applications of AI include expert systems, natural language
               processing, speech recognition and machine vision
             </p>
             <div class="section-image-container">
-              <img
+              <figure class="figure-container">
+                   <img
                 src="https://s3.ap-south-1.amazonaws.com/new-assets.ccbp.in/frontend/static-website/ai-image.png"
                 class="ai-image"
               />
+              <figcaption>Fig  1 : - AI</figcaption>
+              </figure>
+              
             </div>
           </section>
           <section class="section">
